--- a/IBAN Storage/IBAN Storage/Base.lproj/Main.storyboard
+++ b/IBAN Storage/IBAN Storage/Base.lproj/Main.storyboard
@@ -48,25 +48,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dollarsign.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="df1-xN-jQ8">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dollarsign.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="df1-xN-jQ8">
                                 <rect key="frame" x="111" y="162" width="171" height="131"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="171" id="dJw-3g-2Jm"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="132.33000000000001" id="dlk-By-NXP"/>
+                                    <constraint firstAttribute="height" constant="132.33000000000001" id="eeX-t9-QGG"/>
+                                    <constraint firstAttribute="width" constant="171" id="q2K-nw-X1f"/>
+                                </constraints>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bank:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MSZ-qY-dBE">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bank:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MSZ-qY-dBE">
                                 <rect key="frame" x="55" y="335" width="282" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="QxY-ci-8JF"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="IBAN:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rtu-Oy-zfB">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="IBAN:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rtu-Oy-zfB">
                                 <rect key="frame" x="55" y="377" width="282" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="bW8-mZ-c1S"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PXH-n4-fwd">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PXH-n4-fwd">
                                 <rect key="frame" x="131" y="419" width="130" height="71"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Save"/>
                                 <connections>
@@ -76,6 +84,20 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ev9-Ie-zH2"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Rtu-Oy-zfB" firstAttribute="top" secondItem="MSZ-qY-dBE" secondAttribute="bottom" constant="8" id="5dK-FI-7US"/>
+                            <constraint firstItem="df1-xN-jQ8" firstAttribute="top" secondItem="Y42-DA-MXo" secondAttribute="topMargin" constant="-0.66666666666665719" id="5xf-DQ-wM7"/>
+                            <constraint firstItem="ev9-Ie-zH2" firstAttribute="bottom" secondItem="PXH-n4-fwd" secondAttribute="bottom" constant="294" id="9mA-cg-uSu"/>
+                            <constraint firstItem="MSZ-qY-dBE" firstAttribute="trailing" secondItem="Rtu-Oy-zfB" secondAttribute="trailing" id="Irl-Rq-AuZ"/>
+                            <constraint firstItem="PXH-n4-fwd" firstAttribute="top" secondItem="Rtu-Oy-zfB" secondAttribute="bottom" constant="8" id="J6r-zO-jAi"/>
+                            <constraint firstItem="MSZ-qY-dBE" firstAttribute="top" secondItem="df1-xN-jQ8" secondAttribute="bottom" constant="41.333333333333371" id="SXW-pi-HDA"/>
+                            <constraint firstItem="PXH-n4-fwd" firstAttribute="leading" secondItem="ev9-Ie-zH2" secondAttribute="leading" constant="131" id="aJg-FT-E44"/>
+                            <constraint firstItem="Rtu-Oy-zfB" firstAttribute="centerX" secondItem="PXH-n4-fwd" secondAttribute="centerX" id="drA-6U-hCn"/>
+                            <constraint firstItem="MSZ-qY-dBE" firstAttribute="centerX" secondItem="Y42-DA-MXo" secondAttribute="centerX" id="lE2-ku-TtH"/>
+                            <constraint firstItem="MSZ-qY-dBE" firstAttribute="leading" secondItem="Rtu-Oy-zfB" secondAttribute="leading" id="xOK-GR-Dn3"/>
+                            <constraint firstItem="df1-xN-jQ8" firstAttribute="centerX" secondItem="MSZ-qY-dBE" secondAttribute="centerX" id="yQH-TR-6md"/>
+                            <constraint firstItem="MSZ-qY-dBE" firstAttribute="leading" secondItem="ev9-Ie-zH2" secondAttribute="leading" constant="55" id="yv2-mI-PfR"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="V6H-1U-iEg"/>
                     <connections>
